--- a/sites/handbook/source/handbook/engineering/development/sec/index.html.md.erb
+++ b/sites/handbook/source/handbook/engineering/development/sec/index.html.md.erb
@@ -19,7 +19,7 @@ description: >-
 The following teams comprise the sub-department:
 
 - Govern stage - [handbook](/handbook/engineering/development/sec/govern/)
-  - Security Policies group
+  - Security Policies group - [handbook](/handbook/engineering/development/sec/govern/security-policies/)
   - Threat Insights group - [handbook](/handbook/engineering/development/sec/govern/threat-insights/)
 - Secure stage - [handbook](/handbook/engineering/development/sec/secure/)
   - Composition Analysis group - [handbook](/handbook/engineering/development/sec/secure/composition-analysis/)
@@ -155,16 +155,16 @@ Common scenarios/architectural concepts will likely be resolved/discovered. Thes
 
 The table below captures characteristics (requirements?) of work that is in-scope, opt-in, or out-of-scope. All requirements must be met for each category.
 
-| Reason/Condition | In-Scope | Opt-in | Out-of-Scope |
-|------------------|----------|--------|--------------|
-| Does not involve architectural decisions | | | x |
-| Is after-the-fact | | | x |
-| Is not already covered by architecture guidelines/handbook | x | x | |
-| Has broad impact within #secure[^1] | x | | |
-| Is a new unit of work | x | x | |
-| Is strictly #secure or #govern | x | x |  |
-| Could not come to an agreement (escalation) | | ? | |
-| Involves architecture decisions | x | x | |
+| Reason/Condition                                           | In-Scope | Opt-in | Out-of-Scope |
+|------------------------------------------------------------|----------|--------|--------------|
+| Does not involve architectural decisions                   |          |        | x            |
+| Is after-the-fact                                          |          |        | x            |
+| Is not already covered by architecture guidelines/handbook | x        | x      |              |
+| Has broad impact within #secure[^1]                        | x        |        |              |
+| Is a new unit of work                                      | x        | x      |              |
+| Is strictly #secure or #govern                             | x        | x      |              |
+| Could not come to an agreement (escalation)                |          | ?      |              |
+| Involves architecture decisions                            | x        | x      |              |
 
 [^1]: Meaning that the proposed work requires knowledge or impacts multiple groups
 
@@ -174,15 +174,15 @@ GitLab’s Stance for Architectural issues: https://about.gitlab.com/handbook/en
 
 #### Team Representatives
 
-| Team | Representative |
-| --- | --- |
-| [Composition Analysis](#composition-analysis) | <%= link_to_team_member('fcatteau') %>  |
-| [Security Policies](#security-policies) | <%= link_to_team_member('mparuszewski') %> |
-| [Dynamic Analysis](#dynamic-analysis) | <%= link_to_team_member('cam_swords') %> |
-| [Static Analysis](#static-analysis) | <%= link_to_team_member('theoretick') %>  |
-| [Threat Insights](#threat-insights) BE | <%= link_to_team_member('minac') %> |
-| [Threat Insights](#threat-insights) FE | <%= link_to_team_member('svedova') %> |
-| [Vulnerability Research](#vulnerability-research) | <%= link_to_team_member('idawson') %>, <%= link_to_team_member('julianthome') %> |
+| Team                                                 | Representative                                                                   |
+|------------------------------------------------------|----------------------------------------------------------------------------------|
+| [Composition Analysis](secure/composition-analysis/) | <%= link_to_team_member('fcatteau') %>                                           |
+| [Security Policies](govern/security-policies/)       | <%= link_to_team_member('mparuszewski') %>                                       |
+| [Dynamic Analysis](secure/dynamic-analysis/)         | <%= link_to_team_member('cam_swords') %>                                         |
+| [Static Analysis](secure/static-analysis/)           | <%= link_to_team_member('theoretick') %>                                         |
+| [Threat Insights](govern/threat-insights/) BE        | <%= link_to_team_member('minac') %>                                              |
+| [Threat Insights](govern/threat-insights/) FE        | <%= link_to_team_member('svedova') %>                                            |
+| [Vulnerability Research](secure/vulnerability-research/)    | <%= link_to_team_member('idawson') %>, <%= link_to_team_member('julianthome') %> |
 
 ### Frontend Chapter (Slack [#secure-frontend-chapter](https://gitlab.slack.com/archives/C031RSQ72S2))
 
@@ -221,17 +221,17 @@ The frontend chapter has identified components that cross team boundaries within
 
 #### Team Representatives
 
-| Team                                          | Representative                                    |
-| --------------------------------------------- | ------------------------------------------------- |
-| [Composition Analysis](#composition-analysis) | <%= link_to_team_member('farias-gl') %>           |
-| [Static Analysis](#static-analysis)           | <%= link_to_team_member('jannik_lehmann') %>      |
-| [Dynamic Analysis](#dynamic-analysis)         | <%= link_to_team_member('arfedoro') %>            |
-| [Dynamic Analysis](#dynamic-analysis)         | <%= link_to_team_member('djadmin') %>             |
-| [Threat Insights](#threat-insights)           | <%= link_to_team_member('dftian') %>              |
-| [Threat Insights](#threat-insights)           | <%= link_to_team_member('dpisek') %>              |
-| [Threat Insights](#threat-insights)           | <%= link_to_team_member('pgascouvaillancourt') %> |
-| [Threat Insights](#threat-insights)           | <%= link_to_team_member('sming-gitlab') %>        |
-| [Threat Insights](#threat-insights)           | <%= link_to_team_member('svedova') %>             |
+| Team                                                 | Representative                                    |
+|------------------------------------------------------|---------------------------------------------------|
+| [Composition Analysis](secure/composition-analysis/) | <%= link_to_team_member('farias-gl') %>           |
+| [Static Analysis](secure/static-analysis/)           | <%= link_to_team_member('jannik_lehmann') %>      |
+| [Dynamic Analysis](secure/dynamic-analysis/)         | <%= link_to_team_member('arfedoro') %>            |
+| [Dynamic Analysis](secure/dynamic-analysis/)         | <%= link_to_team_member('djadmin') %>             |
+| [Threat Insights](govern/threat-insights/)           | <%= link_to_team_member('dftian') %>              |
+| [Threat Insights](govern/threat-insights/)           | <%= link_to_team_member('dpisek') %>              |
+| [Threat Insights](govern/threat-insights/)           | <%= link_to_team_member('pgascouvaillancourt') %> |
+| [Threat Insights](govern/threat-insights/)           | <%= link_to_team_member('sming-gitlab') %>        |
+| [Threat Insights](govern/threat-insights/)           | <%= link_to_team_member('svedova') %>             |
 
 #### Page Performance
 
