Clarify steps are intended for who drives the maintainer approval process

--- a/sites/handbook/source/handbook/engineering/workflow/code-review/index.html.md.erb
+++ b/sites/handbook/source/handbook/engineering/workflow/code-review/index.html.md.erb
@@ -71,7 +71,7 @@ After each review is complete, the reviewer should write up a justification abou
 
 At any time, the manager/mentor may choose to open a merge request, adding the reviewer as a maintainer. This merge request should have a justification from the manager as to why the reviewer should become a maintainer. You are also welcome to open this merge request yourself at any time.
 
-Before opening the merge request, the reviewer should:
+Before opening the merge request, the author should:
 
 1. Review justifications for several of the reviewer's recent merge requests.
 1. Reach out to at least two of the maintainers privately for feedback on the reviewer. The reviewer may have some suggestions on who these maintainers could be.
