--- a/sites/handbook/source/handbook/engineering/development/sec/govern/index.html.md.erb
+++ b/sites/handbook/source/handbook/engineering/development/sec/govern/index.html.md.erb
@@ -42,8 +42,9 @@ The following members of other functional teams are our stable counterparts:
       role_regexp: /[,&] Govern/,
       direct_manager_role: nil,
       other_manager_roles: [
-        'Fullstack Engineering Manager, Govern:Threat Insights, Govern:Security Policies',
-        'Fullstack Engineering Manager, Govern:Threat Insights, Govern:Security Policies',
+        'Fullstack Engineering Manager, Govern:Threat Insights',
+        'Fullstack Engineering Manager, Govern:Threat Insights',
+        'Staff Backend Engineer and Acting Fullstack Manager, Govern:Security Policies',
         'Director of Engineering for Growth, Sec, and ModelOps',
         'Senior Engineering Manager, Anti-Abuse, Govern, and Growth'
       ])
@@ -53,14 +54,14 @@ The following members of other functional teams are our stable counterparts:
 
 Because we have a wide range of domains to cover, it requires a lot of different expertise and skills:
 
-| Technology skills  | Areas of interest         |
-| -------------------|---------------------------|
-| Ruby on Rails      | Backend development       |
-| Go                 | Backend development       |
-| Vue, Vuex          | Frontend development      |
-| GraphQL            | _Various_                 |
-| SQL (PostgreSQL)   | _Various_                 |
-| Docker/Kubernetes  | Threat Detection          |
+| Technology skills | Areas of interest    |
+|-------------------|----------------------|
+| Ruby on Rails     | Backend development  |
+| Go                | Backend development  |
+| Vue, Vuex         | Frontend development |
+| GraphQL           | _Various_            |
+| SQL (PostgreSQL)  | _Various_            |
+| Docker/Kubernetes | Threat Detection     |
 
 
 ## Engineering Refinement & Planning
