--- a/sites/uncategorized/source/blog/blog-posts/2022-10-03-arm-open-source-makes-a-seamless-migration-to-gitlab.html.md.erb
+++ b/sites/uncategorized/source/blog/blog-posts/2022-10-03-arm-open-source-makes-a-seamless-migration-to-gitlab.html.md.erb
@@ -7,6 +7,7 @@ image_title: /images/blogimages/a-creative-agencys-gitlab-wishlist.jpg
 twitter_text: Arm Open Source makes a seamless migration to GitLab, reaping cost
   savings of up to 20%.
 ---
+
 [Arm](https://www.arm.com/) wanted to modernize its infrastructure to span across internal (private) and open-source collaborative repositories, and, in the process, consolidate some of its key projects on the same underlying infrastructure. Arm selected GitLab as its new platform. 
 
 Arm builds software that acts as enablement pieces that can be integrated with other software on its architecture. These are foundational pieces of software that often underpin commercial software offerings, from operating systems to middleware applications. Over 99% of mobile devices have Arm-based processors and the software from the Open Source Engineering team powers computers from sensors up to the cloud.
@@ -16,7 +17,10 @@ Arm builds software that acts as enablement pieces that can be integrated with o
 The goal is to give software developers the best of the Arm architecture, he adds. The enablement pieces “leverage a lot of the bells and whistles from the Arm architecture and that allows people to take those and integrate them with other stacks.”
 
 ## GitLab open source lets Arm use its own tooling
-Arm had a mix of stand-alone git servers internally and public web-based git service and wanted to consolidate to a single solution for the company’s larger projects. However,  most of the new core infrastructure that Arm is deploying is on native Arm-based hardware, and the git service is a proprietary solution. Arm would have to work with its  previous platform provider to ensure correctness. According to Wafaa, “We'd have to do reviews, and the patch review process is challenging because it's all private and proprietary code, which was a big factor for us in choosing GitLab.” In addition, Arm had concerns about the code ownership of their OSS projects hosted on the external service. Therefore, Arm determined an open source solution like GitLab would be the best option to maximize choice, be cost effective, and minimize vendor lock-in. Moving to GitLab’s self-hosted platform supported effective collaboration and enabled Arm’s software to be hosted on Arm technology.  
+
+Arm had a mix of stand-alone git servers internally and public web-based git service and wanted to consolidate to a single solution for the company’s larger projects. However,  most of the new core infrastructure that Arm is deploying is on native Arm-based hardware, and the git service is a proprietary solution. 
+
+Arm would have to work with its previous platform provider to ensure correctness. According to Wafaa, “We'd have to do reviews, and the patch review process is challenging because it's all private and proprietary code, which was a big factor for us in choosing GitLab.” In addition, Arm had concerns about the code ownership of their OSS projects hosted on the external service. Therefore, Arm determined an open source solution like GitLab would be the best option to maximize choice, be cost effective, and minimize vendor lock-in. Moving to GitLab’s self-hosted platform supported effective collaboration and enabled Arm’s software to be hosted on Arm technology.  
 
 Another large bonus is that because GitLab is open source, Arm can use its own tools to support its open source ecosystem. “Using an open source product made sense at the end of the day,’’ Wafaa says. “Another big factor was that GitLab is an enterprise-grade product that provides very similar workflows to what Arm was already using. It was very easy to move from our previous platform to GitLab; the terminology is very similar, as well as the look and feel.”
  
@@ -24,10 +28,11 @@ Further, GitLab is a self-hosted enterprise product, and it was important to Arm
  
 Arm hosts about 200 external open source projects, so of course cost was also a consideration, Wafaa says. “When we're looking at future growth plans there needs to be a reasonable amount of savings and GitLab made it appealing cost-wise.” 
 
-Maintaining control every step along the way
+## Maintaining control every step along the way
+
 Arm is in the process of moving internal workloads to the Arm architecture. Although GitLab didn't initially support Arm, the company “was quite happy to work with us and our engineering teams to ensure that it did support Arm” by creating integrations with its infrastructure, Wafaa says.
  
-“The fact that we could have that fine-grained access control was a huge benefit to us and being able to replicate it on AWS Graviton EC2 instances globally gave us that full redundancy and disaster recovery requirements to meet our IT's needs,’’ Wafaa says.
+“The fact that we could have that fine-grained access control was a huge benefit to us and being able to replicate it on AWS Graviton EC2 instances globally gave us that full redundancy and disaster recovery requirements to meet our IT's needs," Wafaa says.
  
 Because Arm is an IP company, security is paramount. Wafaa says they opted for a gradual migration before scaling out. “For us to deploy, we have to go through a number of approvals with various security teams internally, and that went fairly smoothly. It just worked.”
  
@@ -41,22 +46,24 @@ Migration to GitLab is ongoing with about 90 percent of it complete. “Certain 
 
 With the adoption of GitLab, Arm’s Open Source Engineering teams can now offer full end-to-end native development, and can confidently say “software development by Arm, for Arm, on Arm”. GitLab is not just a DevOps tool, it is a tool that helps companies like Arm offer a complete developer experience.
  
-Solid metrics for Arm
+## Solid metrics for Arm
 
 With GitLab, Arm has found a number of benefits:
-Ease of CI/CD set up and integration
-Cost savings of between 15% and 20%
-Time savings of an average two to four people a month on admin work
-Tool simplification
-The ability to share and collaborate on pipelines/code
-Quick setup of new projects and onboarding of teams
+- Ease of CI/CD set up and integration
+- Cost savings of between 15% and 20%
+- Time savings of an average two to four people a month on admin work
+- Tool simplification
+- The ability to share and collaborate on pipelines/code
+- Quick setup of new projects and onboarding of teams
 
 Previously, there were multiple individual components that would have to be then stitched together, Wafaa says. “GitLab actually offers us more features and more functionality than we're necessarily used to, and that’s great.”
 
 That’s especially useful because other contributors want to use pretty much every feature possible for their projects, both for corporate and personal use. For example, one engineer uses GitLab in a personal capacity and wants full CI capabilities.
  
 Both Wafaa and Arnold are confident that once the migration is completed, there will be significant time savings and projects will be onboarded quickly.
-Easy deployment in the clouds
+
+## Deployment in the clouds
+
 On tap now is working through how to share parts of the pipelines so that teams can adopt things quicker, Arnold says. By the time the migration is completed, Arm will have most of what contributors need, he says.
  
 Right now, Arm is using AWS EC2 instances. Looking ahead, Arnold envisions that deployment between cloud providers will become more seamless without having to change underlying code.
