--- a/sites/handbook/source/handbook/engineering/development/ops/verify/runner/index.html.md.erb
+++ b/sites/handbook/source/handbook/engineering/development/ops/verify/runner/index.html.md.erb
@@ -181,6 +181,7 @@ These limits are intended to help with the work load on the reviewers and mainta
 * Make sure entry in `team.yml` has the new member as a reviewer of `gitlab-org/gitlab-runner` and `gitlab-org/ci-cd/custom-executor-drivers/autoscaler`
 * Add to Geekbot daily standup for `Runner Group Daily Standup` and `Runner Weekly Retro`
 * Add to `Verify` 1password vault (requires creating an access request).
+* (SaaS subgroup only) add to `runner_saas` AWS Sandbox Cloud account. Use the [following AR template](https://gitlab.com/gitlab-com/business-technology/engineering/infrastructure/issue-tracker/-/issues/new?issuable_template=aws_group_account_iam_update_request)
 
 ### Onboarding
 
