--- a/sites/uncategorized/source/blog/blog-posts/2022-10-03-arm-open-source-makes-a-seamless-migration-to-gitlab.html.md.erb
+++ b/sites/uncategorized/source/blog/blog-posts/2022-10-03-arm-open-source-makes-a-seamless-migration-to-gitlab.html.md.erb
@@ -18,7 +18,7 @@ The goal is to give software developers the best of the Arm architecture, he add
 
 ## GitLab open source lets Arm use its own tooling
 
-Arm had a mix of stand-alone git servers internally and public web-based git service and wanted to consolidate to a single solution for the company’s larger projects. However,  most of the new core infrastructure that Arm is deploying is on native Arm-based hardware, and the git service is a proprietary solution. 
+Arm had a mix of stand-alone Git servers internally and public web-based Git service and wanted to consolidate to a single solution for the company’s larger projects. However,  most of the new core infrastructure that Arm is deploying is on native Arm-based hardware, and the Git service is a proprietary solution. 
 
 Arm would have to work with its previous platform provider to ensure correctness. According to Wafaa, “We'd have to do reviews, and the patch review process is challenging because it's all private and proprietary code, which was a big factor for us in choosing GitLab.” In addition, Arm had concerns about the code ownership of their OSS projects hosted on the external service. Therefore, Arm determined an open source solution like GitLab would be the best option to maximize choice, be cost effective, and minimize vendor lock-in. Moving to GitLab’s self-hosted platform supported effective collaboration and enabled Arm’s software to be hosted on Arm technology.  
 
