--- a/source/direction/configure/kubernetes_management/index.html.md.erb
+++ b/source/direction/configure/kubernetes_management/index.html.md.erb
@@ -77,12 +77,13 @@ Today, the agent supports the following use cases:
 
 As we deprecate the certificate based integrations, we want to make sure that we can offer alternatives for the most valuable parts of that integration. These are
 
-- Improve [the compliance](https://gitlab.com/groups/gitlab-org/-/epics/7933) (confidential) of our tooling
-- [Support various GitLab team to migrate from cert-based to agent-based integrations](https://gitlab.com/groups/gitlab-org/-/epics/7911)
-- [Support for templating tools](https://gitlab.com/gitlab-org/gitlab/-/issues/329773)
-- [Support for multiple, private manifest projects with a single `agentk` installation](https://gitlab.com/gitlab-org/gitlab/-/issues/283885)
+- We are improve [the compliance](https://gitlab.com/groups/gitlab-org/-/epics/7933) (confidential) of our tooling.
+- We [support various GitLab teams to migrate from cert-based to agent-based integrations](https://gitlab.com/groups/gitlab-org/-/epics/7911). Two blocking features are [support for `kubectl exec/attach` commands in the CI/CD workflow](https://gitlab.com/gitlab-org/gitlab/-/issues/346248) and the possibility to [restrict agent sharing with specific branches and environments](https://gitlab.com/gitlab-org/gitlab/-/issues/343885).
+- We are adding [pull-based deployment support for Helm and Kustomize](https://gitlab.com/groups/gitlab-org/-/epics/7938). We shipped alpha support in 15.4 and we are working on further improving Helm support, before turning our attention to Kustomize.
+- We are adding [support for multiple, private manifest projects with a single `agentk` installation](https://gitlab.com/gitlab-org/gitlab/-/issues/283885). This should enable larger organizations to better scale their GitOps deployments.
+- Together with the Release group, we are working on [showing Kubernetes-related, operational insights on Environment pages](https://gitlab.com/gitlab-org/gitlab/-/issues/352186).
 
-Beside the feature development, we are actively [rewriting and extending the related documentation](https://gitlab.com/groups/gitlab-org/-/epics/6267) to be focused around the GitLab Agent for Kubernetes, and we are working on more cross-stage initiatives that can integrate GitOps workflows with other parts of GitLab.
+Besides the feature work, we are [adding better metrics](https://gitlab.com/groups/gitlab-org/-/epics/7200) to the agent for Kubernetes to support further development.
 
 ### Next 9-12 months
 
@@ -90,8 +91,8 @@ We want to make our integrations easy to use. This might mean more automation, c
 
 We want to improve the observability aspects of our integrations.
 
-- [GitLab Managed Clusters](https://gitlab.com/gitlab-org/gitlab/-/issues/297004)
-- [Observability of the resources managed by the agent](https://gitlab.com/groups/gitlab-org/-/epics/2493)
+- We want to provide [a simple, fully automated approach to deploy to non-production environments on top of Kubernetes](https://gitlab.com/groups/gitlab-org/-/epics/8874). This is a follow-up action as we deprecated the legacy [GitLab Managed Cluster](https://docs.gitlab.com/ee/user/project/clusters/gitlab_managed_clusters.html) functionality together with deprecating the certificate-based cluster connections.
+- We want to further improve the Kubernetes - Environments page integration by integrating with the [GitLab Observability stack](https://about.gitlab.com/direction/monitor/observability/) and building out a [feature-full Kubernetes dashboard](https://gitlab.com/groups/gitlab-org/-/epics/2493)
 - [Add group-level views for shared CI/CD tunnel connections](https://gitlab.com/groups/gitlab-org/-/epics/7292)
 
 ## Target User
