add link to part 2

--- a/sites/uncategorized/source/blog/blog-posts/2022-09-20-mobile-devops-with-gitlab-part-1.html.md.erb
+++ b/sites/uncategorized/source/blog/blog-posts/2022-09-20-mobile-devops-with-gitlab-part-1.html.md.erb
@@ -50,7 +50,7 @@ Now, when the CI job runs, all of the secure files will be available in the loca
 
 That's it! Give it a try, and let us know what you think in the [feedback issue](https://gitlab.com/gitlab-org/gitlab/-/issues/362407).
 
-Next time we will walk through how to set up code signing for an Android app.
+Next time we will walk through [how to set up code signing for an Android app](/blog/2022/09/28/mobile-devops-with-gitlab-part-2/).
 
 Cover image by <a href="https://unsplash.com/@refargotohp?utm_source=unsplash&utm_medium=referral&utm_content=creditCopyText">refargotohp</a> on <a href="https://unsplash.com/s/photos/mobile-app-building?utm_source=unsplash&utm_medium=referral&utm_content=creditCopyText">Unsplash</a>.
   
