Revert "Merge branch 'stingrayza-handbook-block-html-parsing' into 'master'"

--- a/sites/handbook/source/handbook/communication/top-misused-terms/index.html.md.erb
+++ b/sites/handbook/source/handbook/communication/top-misused-terms/index.html.md.erb
@@ -65,8 +65,7 @@ Below are terms people frequently use when they should use another term.
 ## Export
 
 <details>
-  <summary>Export: List of top misused terms
-</summary>
+  <summary>Export: List of top misused terms</summary>
 
   <p>Please note that some terms may have been excluded from exports.</p>
 
