--- a/sites/handbook/source/handbook/engineering/development/dev/manage/index.html.md.erb
+++ b/sites/handbook/source/handbook/engineering/development/dev/manage/index.html.md.erb
@@ -89,8 +89,7 @@ It can be hard to understand how you're doing in your role, because feedback can
 This section lists relevant experience areas for individual contributors interested in the management track, new engineering managers, or existing engineering managers who may be lacking opportunities. This list can be used to identify opportunities in these areas.
 
 <details markdown=1>
-<summary>Expert hiring manager
-</summary>
+<summary>Expert hiring manager</summary>
 
 **Expert hiring manager**
 
@@ -102,8 +101,7 @@ This section lists relevant experience areas for individual contributors interes
 </details>
 
 <details markdown=1>
-<summary>Performance management
-</summary>
+<summary>Performance management</summary>
 
 **Performance management**
 
@@ -116,8 +114,7 @@ This section lists relevant experience areas for individual contributors interes
 </details>
 
 <details markdown=1>
-<summary>Communicating company decisions
-</summary>
+<summary>Communicating company decisions</summary>
 
 **Communicating company decisions**
 
@@ -127,8 +124,7 @@ This section lists relevant experience areas for individual contributors interes
 </details>
 
 <details markdown=1>
-<summary>Product area
-</summary>
+<summary>Product area</summary>
 
 **Product area**
 
@@ -143,8 +139,7 @@ This section lists relevant experience areas for individual contributors interes
 </details>
 
 <details markdown=1>
-<summary>Team success
-</summary>
+<summary>Team success</summary>
 
 **Team success**
 
@@ -158,8 +153,7 @@ This section lists relevant experience areas for individual contributors interes
 </details>
 
 <details markdown=1>
-<summary>Achieving consensus
-</summary>
+<summary>Achieving consensus</summary>
 
 **Achieving consensus**
 
@@ -172,8 +166,7 @@ This section lists relevant experience areas for individual contributors interes
 </details>
 
 <details markdown=1>
-<summary>Personal growth
-</summary>
+<summary>Personal growth</summary>
 
 **Personal growth**
 
