--- a/sites/handbook/source/handbook/engineering/metrics/partials/_child_dashboard.erb
+++ b/sites/handbook/source/handbook/engineering/metrics/partials/_child_dashboard.erb
@@ -13,39 +13,34 @@
 #### Development dashboard
 <details>
 (<a href="https://app.periscopedata.com/app/gitlab/681347/Development-Embedded-Dashboard" target="_blank">Sisense↗</a>)
-  <summary><b>Dashboard</b>
-</summary>
+  <summary><b>Dashboard</b></summary>
 <%= partial "handbook/engineering/metrics/partials/dev_dashboard.erb", locals: { filter_type: filter_type_for("dev", filter_type), filter_value: filter_value_for('dev', filter_type, filter_value) } %>
 </details>
 
 #### Infrastructure dashboard
 <details>
 (<a href="https://app.periscopedata.com/app/gitlab/798401/Infrastructure-Embedded-Dashboard" target="_blank">Sisense↗</a>)
-  <summary><b>Dashboard</b>
-</summary>
+  <summary><b>Dashboard</b></summary>
 <%= partial "handbook/engineering/metrics/partials/infrastructure_dashboard.erb", locals: { filter_type: filter_type_for("infrastructure", filter_type), filter_value: filter_value_for('infrastructure', filter_type, filter_value) } %>
 </details>
 
 #### Quality dashboard
 <details>
 (<a href="https://app.periscopedata.com/app/gitlab/736012/Quality-Embedded-Dashboard" target="_blank">Sisense↗</a>)
-  <summary><b>Dashboard</b>
-</summary>
+  <summary><b>Dashboard</b></summary>
 <%= partial "handbook/engineering/metrics/partials/quality_dashboard.erb", locals: { filter_type: filter_type_for("quality", filter_type), filter_value: filter_value_for('quality', filter_type, filter_value) } %>
 </details>
 
 #### UX dashboard
 <details>
 (<a href="https://app.periscopedata.com/app/gitlab/736036/UX-Embedded-Dashboard" target="_blank">Sisense↗</a>)
-  <summary><b>Dashboard</b>
-</summary>
+  <summary><b>Dashboard</b></summary>
 <%= partial "handbook/engineering/metrics/partials/ux_dashboard.erb", locals: { filter_type: filter_type_for("ux", filter_type), filter_value: filter_value_for('ux', filter_type, filter_value) } %>
 </details>
 
 #### Security dashboard
 <details>
 (<a href="https://app.periscopedata.com/app/gitlab/758795/Appsec-Embedded-Dashboard" target="_blank">Sisense↗</a>)
-  <summary><b>Dashboard</b>
-</summary>
+  <summary><b>Dashboard</b></summary>
 <%= partial "handbook/engineering/metrics/partials/security_dashboard.erb", locals: { filter_type: filter_type_for("security", filter_type), filter_value: filter_value_for('security', filter_type, filter_value) } %>
 </details>
