--- a/source/direction/release/environment_management/index.html.md.erb
+++ b/source/direction/release/environment_management/index.html.md.erb
@@ -53,18 +53,19 @@ Through the use of Environments in GitLab, teams can easily understand and take 
 
 | Dimension/Problem | Solution(s) |
 | ------ | ------ |
-| Many deployments | [UI usability enhancements, scalability of the pages](https://gitlab.com/groups/gitlab-org/-/epics/5304) |
-| Many environments | [UI scalability of the pages](https://gitlab.com/groups/gitlab-org/-/epics/5304), support for different types of environments (e.g. staging, production, ephemeral, etc), [environment search](https://gitlab.com/gitlab-org/gitlab/-/issues/10754), [ability to favorite an environment](https://gitlab.com/gitlab-org/gitlab/-/issues/298926), [automated environment cleanup/management](https://gitlab.com/groups/gitlab-org/-/epics/5920) |
+| Many deployments | UI usability enhancements, scalability of the pages) |
+| Many environments | support for different types of environments (e.g. staging, production, ephemeral, etc), [ability to favorite an environment](https://gitlab.com/gitlab-org/gitlab/-/issues/298926), [automated environment cleanup/management](https://gitlab.com/groups/gitlab-org/-/epics/5920) |
 | Across multiple teams and roles | group-level permissions, [deployment approval](https://gitlab.com/groups/gitlab-org/-/epics/6832) |
 | Across multiple projects | [group-level environments](https://gitlab.com/groups/gitlab-org/-/epics/7558) |
 
 ### Specific issues and epics
 
-1. [Environment search](https://gitlab.com/gitlab-org/gitlab/-/issues/10754)
-1. [Show tags related to deployed commit on Environment Page](https://gitlab.com/gitlab-org/gitlab/-/issues/15419)
-1. [Support variable expansion on environment:auto_stop_in](https://gitlab.com/gitlab-org/gitlab/-/issues/365140)
-1. [Org-level Environment Management](hhttps://gitlab.com/groups/gitlab-org/-/epics/7558)
+1. [Show tags related to deployed commit on Environment Detail Page](https://gitlab.com/gitlab-org/gitlab/-/issues/370400)
+1. [Org-level Environment Management](https://gitlab.com/groups/gitlab-org/-/epics/7558)
 1. [Environments cleanup](https://gitlab.com/groups/gitlab-org/-/epics/5920)
+1. [Deployment detail page MVC](https://gitlab.com/gitlab-org/gitlab/-/issues/374538)
+1. [Don't automatically run a deployment job post approval when using Unified Approval Setting](https://gitlab.com/gitlab-org/gitlab/-/issues/367943)
+1. [Don't allow a deployment to be rerun after it's been approved](https://gitlab.com/gitlab-org/gitlab/-/issues/375512)
 1. [Connect Releases with Environments and Deployments](https://gitlab.com/gitlab-org/gitlab/-/issues/332103)
 1. [Log auto stop environment actions](https://gitlab.com/gitlab-org/gitlab/-/issues/36047)
 
