Adds a sentence separating manager action steps for `after merging` from actions steps when `a trainee is not ready to become a maintainer`

--- a/sites/handbook/source/handbook/engineering/workflow/code-review/index.html.md.erb
+++ b/sites/handbook/source/handbook/engineering/workflow/code-review/index.html.md.erb
@@ -84,6 +84,8 @@ Before merging, the manager should:
 
 **If the manager is given feedback that indicates the reviewer is not ready to become a maintainer**: the manager should close the merge request and provide the feedback directly to the reviewer to address the gaps before the reviewer is re-submitted. The earlier the manager can solicit this feedback the better.
 
+After merging, the manager should:
+
 1. Announce this change in the applicable channels listed under [keeping yourself informed section of the engineering handbook](/handbook/engineering/#keeping-yourself-informed) and `#backend_maintainers`/`#frontend_maintainers` and `#backend`/`#frontend`.
 1. Post an update in the **Engineering Week-in-Review document**. The agenda is internal only, please search in Google Drive for 'Engineering Week-in-Review'.
 
@@ -241,7 +243,7 @@ template:
 
   (Maintainer who reviewed this merge request) Please add feedback, and compare
   this review to the average maintainer review.
-  
+
 </details>
 
 **Note:** Do not include reviews of security MRs because review feedback might
@@ -283,7 +285,7 @@ open source, and particularly to GitLab is a competitive advantage for organizat
 reward those organizations for doing so. GitLab highly encourages, celebrates & rewards those that contribute in
 [frequent and atomic iterations](/handbook/values/#iteration). When an organization or individual without affiliations
 reaches 20 merged merge requests or more within the last 3 completed months, we consider that organization or individual
-a ```Leading Organization```. 
+a ```Leading Organization```.
 
 Organizations are matched based on the ```Organization``` field in [your profile](https://gitlab.com/-/profile). GitLab
 can also match individuals to organizations using other metadata available to the Contributor Success team. [Create an
