Update trainee templates and references

--- a/sites/handbook/source/handbook/engineering/development/ops/verify/runner/index.html.md.erb
+++ b/sites/handbook/source/handbook/engineering/development/ops/verify/runner/index.html.md.erb
@@ -194,12 +194,7 @@ Although maintainer access is provided from day one for practical purposes,
 we follow the same process [outlined
 here](/handbook/engineering/workflow/code-review/#how-to-become-a-project-maintainer).
 Any engineeer inside of the organization is welcome to become a
-maintainer of a project owned by the Runner team. The first step would
-be to become a [trainee
-maintainer](/handbook/engineering/workflow/code-review/#trainee-maintainer).
-
-To start the maintainer training process,
-please create an issue in the Runner project's issue tracker using the [Release Maintainer Trainee template](https://gitlab.com/gitlab-org/gitlab-runner/issues/new?issuable_template=trainee-backend-maintainer).
+maintainer of a project owned by the Runner team.
 
 ### Technical Debt / Backstage work
 
