--- a/sites/uncategorized/source/job-families/engineering/development/backend/index.html.md.erb
+++ b/sites/uncategorized/source/job-families/engineering/development/backend/index.html.md.erb
@@ -142,7 +142,7 @@ The Senior Backend Engineer is a [grade 7](/handbook/total-rewards/compensation/
 * Represent GitLab and its values in public communication around broader initiatives, specific projects, and community contributions.
 * Provide mentorship for Junior and Intermediate Engineers on your team to help them grow in their technical responsibilities and remove blockers to their autonomy.
 * Confidently ship moderately sized features and improvements with minimal guidance and support from other team members. Collaborate with the team on larger projects.
-* Improves the [engineering projects](/handbook/engineering/projects/) at GitLab via [maintainer trainee program](/handbook/engineering/workflow/code-review/#how-to-become-a-project-maintainer) at own comfortable pace, while striving to become a [project maintainer](/handbook/engineering/workflow/code-review/#maintainer).
+* Improves the [engineering projects](/handbook/engineering/projects/) at GitLab via [the maintainer program](/handbook/engineering/workflow/code-review/#how-to-become-a-project-maintainer). For more information regarding timelines and exceptions, [see this page](/handbook/engineering/workflow/code-review/#maintainer).
 
 ***
 
