--- a/sites/handbook/source/handbook/engineering/development/dev/create/code-review/backend/index.html.md.erb
+++ b/sites/handbook/source/handbook/engineering/development/dev/create/code-review/backend/index.html.md.erb
@@ -273,7 +273,7 @@ It can be hard to understand how you're doing in your role, because feedback can
 
 This is a list of commonly requested training and some additional resources:
 
-1. [The Database maintainer template](https://gitlab.com/gitlab-com/www-gitlab-com/-/blob/master/.gitlab/issue_templates/trainee-database-maintainer.md) centralizes training related to being not just a maintainer, but all the resources for a reviewer as well.
+1. [The Database maintainer process](https://gitlab.com/gitlab-com/www-gitlab-com/-/blob/master/sites/handbook/source/handbook/engineering/workflow/code-review/index.md#project-maintainer-process-for-gitlab-database) centralizes training related to being not just a maintainer, but all the resources for a reviewer as well.
 1. [The Golang training template](https://gitlab.com/gitlab-com/www-gitlab-com/-/blob/master/.gitlab/issue_templates/golang_training.md) offers resources related to learning Go.
 1. [The feature flag training template](https://gitlab.com/gitlab-com/www-gitlab-com/-/blob/master/.gitlab/issue_templates/feature-flag-training.md) will help get you started in understanding how to use feature flags at GitLab, as well as monitor the performance of your work.
 1. [There are 2 YouTube playlists](/handbook/engineering/monitoring/#related-videos) that cover our monitoring and visualization tools. More resources are available [in the handbook](/handbook/engineering/monitoring/) in terms of Grafana, Kibana, Prometheus, Sentry, and Sitespeed.io.
