--- a/sites/uncategorized/source/blog/blog-posts/2022-10-03-arm-open-source-makes-a-seamless-migration-to-gitlab.html.md.erb
+++ b/sites/uncategorized/source/blog/blog-posts/2022-10-03-arm-open-source-makes-a-seamless-migration-to-gitlab.html.md.erb
@@ -22,7 +22,7 @@ Arm had a mix of stand-alone Git servers internally and public web-based Git ser
 
 Arm would have to work with its previous platform provider to ensure correctness. According to Wafaa, “We'd have to do reviews, and the patch review process is challenging because it's all private and proprietary code, which was a big factor for us in choosing GitLab.” In addition, Arm had concerns about the code ownership of their OSS projects hosted on the external service. Therefore, Arm determined an open source solution like GitLab would be the best option to maximize choice, be cost effective, and minimize vendor lock-in. Moving to GitLab’s self-hosted platform supported effective collaboration and enabled Arm’s software to be hosted on Arm technology.  
 
-Another large bonus is that because GitLab is open source, Arm can use its own tools to support its open source ecosystem. “Using an open source product made sense at the end of the day,’’ Wafaa says. “Another big factor was that GitLab is an enterprise-grade product that provides very similar workflows to what Arm was already using. It was very easy to move from our previous platform to GitLab; the terminology is very similar, as well as the look and feel.”
+Another large bonus is that because [GitLab is open source](/solutions/open-source/), Arm can use its own tools to support its open source ecosystem. “Using an open source product made sense at the end of the day,’’ Wafaa says. “Another big factor was that GitLab is an enterprise-grade product that provides very similar workflows to what Arm was already using. It was very easy to move from our previous platform to GitLab; the terminology is very similar, as well as the look and feel.”
  
 Further, GitLab is a self-hosted enterprise product, and it was important to Arm to have good customer support in the event that something goes wrong.
  
@@ -66,7 +66,7 @@ Both Wafaa and Arnold are confident that once the migration is completed, there 
 
 On tap now is working through how to share parts of the pipelines so that teams can adopt things quicker, Arnold says. By the time the migration is completed, Arm will have most of what contributors need, he says.
  
-Right now, Arm is using AWS EC2 instances. Looking ahead, Arnold envisions that deployment between cloud providers will become more seamless without having to change underlying code.
+Right now, Arm is using AWS EC2 instances. Looking ahead, Arnold envisions that [deployment between cloud providers](/topics/multicloud/) will become more seamless without having to change underlying code.
 
 Says Wafaa, “Once we've got people fully onto GitLab, then we'll look at how we can expand it and perhaps provide a more robust level of redundancy across geographies via the containerized route. This is an area of ongoing collaboration between Arm and GitLab, and we hope to be able to deploy soon.”
 
