added link to part 3

--- a/sites/uncategorized/source/blog/blog-posts/2022-09-28-mobile-devops-with-gitlab-part-2.html.md.erb
+++ b/sites/uncategorized/source/blog/blog-posts/2022-09-28-mobile-devops-with-gitlab-part-2.html.md.erb
@@ -122,7 +122,9 @@ Commit the changes to your `.gitlab-ci.yml` file and after you push the changes 
 
 Take a look at [this branch in the sample project](https://gitlab.com/gitlab-org/incubation-engineering/devops-for-mobile-apps/android_demo/-/tree/basic_build) for reference.
 
-Give it a try, and let us know what you think in the [feedback issue](https://gitlab.com/gitlab-org/gitlab/-/issues/362407).
+Give it a try, and let us know what you think in the [feedback issue](https://gitlab.com/gitlab-org/gitlab/-/issues/362407). Then, check out Part 3, which deals with [code signing for iOS](/blog/2022/10/03/mobile-devops-with-gitlab-part-3-code-signing-for-ios-with-gitlab-and-fastlane/). 
+
+
 
 _Cover image by  <a href="https://unsplash.com/@teddygr?utm_source=unsplash&utm_medium=referral&utm_content=creditCopyText">Teddy GR</a> on <a href="https://unsplash.com/s/photos/google-phone?utm_source=unsplash&utm_medium=referral&utm_content=creditCopyText">Unsplash</a>_
   
