Fix link to the Configure Workflow board

--- a/sites/handbook/source/handbook/engineering/development/ops/configure/index.html.md.erb
+++ b/sites/handbook/source/handbook/engineering/development/ops/configure/index.html.md.erb
@@ -303,7 +303,7 @@ The issues scheduled for a milestone can be tracked at [Milestone Board](https:/
 Our goal is to move towards a continuous delivery model so the team completes tasks regularly, and keeps working off of a prioritized backlog of issues. We default to team members self-scheduling their work:
 
 - The team has weekly meetings to discuss issue priorities and to do issue refinement.
-- Team members self-assign issues from the [Configure issue board](https://gitlab.com/groups/gitlab-org/-/boards/1223426?scope=all&utf8=%E2%9C%93&state=opened&label_name%5B%5D=group%3A%3Aorchestration) that are in the `workflow:ready for development` column.
+- Team members self-assign issues from the [Configure issue board](https://gitlab.com/groups/gitlab-org/-/boards/1223426?scope=all&utf8=%E2%9C%93&state=opened) that are in the `workflow:ready for development` column.
 - Once a team member has completed their assigned issues, they are expected to go to the group issue boards and assign themselves to the next unassigned `workflow:ready for development` issue.
 - The issues on the board are in priority order based on importance (the higher they are on the list, the higher the priority). This order is set by the product manager.
 - If all issues are assigned for the milestone, team members are expected to identify the next available issue to work on based on the team's work prioritization (see below).
