Add stable counterparts for Gitaly team

--- a/sites/handbook/source/handbook/engineering/development/enablement/systems/gitaly/index.html.md.erb
+++ b/sites/handbook/source/handbook/engineering/development/enablement/systems/gitaly/index.html.md.erb
@@ -29,7 +29,7 @@ The following people are permanent members of the Gitaly Team:
 
 The following members of other functional teams are our stable counterparts:
 
-<%= stable_counterparts(role_regexp: /[&,] Systems:Gitaly/, direct_manager_role: 'Backend Engineering Manager, Gitaly') %>
+<%= stable_counterparts(role_regexp: /[&,] Systems:Gitaly( API)?/, direct_manager_role: 'Backend Engineering Manager, Gitaly') %>
 
 ## Gitaly functional boundary
 
