Add Leading Orgs to Community Relations page

--- a/sites/handbook/source/handbook/marketing/community-relations/index.html.md.erb
+++ b/sites/handbook/source/handbook/marketing/community-relations/index.html.md.erb
@@ -57,6 +57,7 @@ The Community Relations team supports this mission by working with our community
 - [Code Contributor Program](/handbook/marketing/community-relations/code-contributor-program/)
 - [Evangelist Program](/handbook/marketing/community-relations/evangelist-program/)
 - [Developer Evangelism](/handbook/marketing/community-relations/developer-evangelism/)
+- [Leading Organizations](/handbook/marketing/community-relations/leading-organizations/)
 - [Community Programs](/handbook/marketing/community-relations/community-programs/)
     - [Open Source Program](/handbook/marketing/community-relations/opensource-program/)
     - [Education Program](/handbook/marketing/community-relations/community-programs/education-program/)
