Add Matej as Interim Product Designer on Optimize

--- a/sites/handbook/source/includes/product/_categories-names.erb
+++ b/sites/handbook/source/includes/product/_categories-names.erb
@@ -237,6 +237,7 @@
 [Annabel Dunstone Gray]: /company/team/#annabeldunstone
 [Pedro Moreira da Silva]: /company/team/#pedromscom
 [Matej Latin]: /company/team/#matejlatin
+[Matej Latin (Interim)]: /company/team/#matejlatin
 [Andy Volpe]: /company/team/#heyandyvolpe
 [Amelia Bauerly]: /company/team/#ameliabauerly
 [Rayana Verissimo]: /company/team/#rayana
