Updating some misspellings and rewording phrases in the table list

--- a/sites/uncategorized/source/learn/certifications/public/index.html.md.erb
+++ b/sites/uncategorized/source/learn/certifications/public/index.html.md.erb
@@ -34,7 +34,7 @@ GitLab follows an organization-wide minimum set of requirements to determine wha
 ### What is not considered a certification
 1. Self-study eLearning course that includes a knowledge check/assessment without an examination.
 1. Standalone instructional videos, job aids, blog posts, or articles.
-1. Training that includes a certificate of completion
+1. Training that includes a certificate of completion.
 
 ## What is included in a GitLab Certification
 
@@ -42,8 +42,8 @@ GitLab offers two types of certifications
 
 | Certification Type | Description | How to Earn | Where to Find |
 | ------ | ------ | ------ | ------ |
-| Technical Certification | Technical certifications to help the GitLab community and team members validate their ability to apply GitLab in their daily DevOps work.  | To earn a technical certification: <br> 1. Candidates must pass a written asessment. <br> 2. Pass a hands-on lab assessment. <br> 3. Graded by GitLab Professional Services Engineers | See list below |
-| Knowledge Certification |  Role-based certifications that include functional, soft skills, and product training for team and community members. | To earn a knowledge certification: <br> 1. Complete a prerequisite. <br> 2. Pass an online written exam (knowledge). <br> 3. Pass a practical assessment (skill) <br> Upon completion of all courses within each certification, learners will receive a badge or certificate of completion | See list below |
+| Technical Certification | Technical certifications to help the GitLab community and team members validate their ability to apply GitLab in their daily DevOps work.  | To earn a technical certification, candidates must: <br> 1. Pass a written asessment. <br> 2. Pass a hands-on lab assessment. <br> 3. Receive a grade by GitLab Professional Services Engineers. | See list below |
+| Knowledge Certification |  Role-based certifications that include functional, soft skills, and product training for team and community members. | To earn a knowledge certification, candidates must: <br> 1. Complete a prerequisite. <br> 2. Pass an online written exam (knowledge). <br> 3. Pass a practical assessment (skill) <br> Upon completion of all courses within each certification, learners will receive a badge or certificate of completion. | See list below |
 
 ## Technical Certifications Overview
 
@@ -94,4 +94,4 @@ Certifications help confirm that team members possess the skills needed to effec
 
 #### For individuals
 
-Certification include a logo that can be shared on social media to showcase your accomplishment. This helps highlight to colleagues and employers proficiency in using GitLab.
+Certification includes a logo that can be shared on social media to showcase your accomplishment. This helps highlight to colleagues and employers proficiency in using GitLab.
