--- a/sites/uncategorized/source/blog/blog-posts/2022-10-04-the-many-routes-to-a-tech-career.html.md.erb
+++ b/sites/uncategorized/source/blog/blog-posts/2022-10-04-the-many-routes-to-a-tech-career.html.md.erb
@@ -5,8 +5,8 @@ tags: careers, inside GitLab
 description: GitLab team members of different ages and backgrounds share their
   entry into this industry.
 image_title: /images/blogimages/Learn-at-GL.jpg
-twitter_text: We chat with a few @gitlab team members with different backgrounds
-  and at various stages in their careers to learn about their journey to tech.
+twitter_text: 'We chat with a few @gitlab team members with different backgrounds
+  and at various stages in their careers to learn about their journey to tech."
 ---
 The path to a career in technology isn’t always straight, particularly today. World and economic uncertainty, a lingering pandemic, a shift to remote work, a need to do something that *matters* – all of these factors have caused sweeping changes in the broader workforce, in individual careers, and in the labor-shortage-plagued technology industry.
 
