--- a/sites/handbook/source/handbook/engineering/development/sec/secure/composition-analysis/index.html.md.erb
+++ b/sites/handbook/source/handbook/engineering/development/sec/secure/composition-analysis/index.html.md.erb
@@ -89,7 +89,7 @@ Time allocation: 15% of 1 engineer.
 
 #### Responsibilities - Maintainership
 
-Time allocation: 25% of 1 engineer.
+Time allocation: 15% of 1 engineer.
 
 1. Triage and work with community contributors to help drive their MRs to completion. (See [Community contributions triaging process](#community-contributions-triaging-process))
 1. Check for new versions of languages or package managers that we support, or deprecation / removal of support for the same and notify Engineering Manager and Product Manager via issue
@@ -107,10 +107,12 @@ Time allocation: 25% of 1 engineer.
 Time allocation: 15% of 1 engineer.
 
 1. Monitor slack channels for questions, support requests, and alerts. While other team members may respond to these requests, the engineer assigned to the reaction rotation is expected to handle them primarily.
+If a support engineer requests assistance via slack and it requires investigation or debugging, they should be directed to raise an issue in [a dedicated project](https://gitlab.com/gitlab-com/sec-sub-department/section-sec-request-for-help).
     - [#g_secure-composition-analysis](https://gitlab.slack.com/archives/CKWHYU7U2)
     - [#s_secure](https://gitlab.slack.com/archives/C8S0HHM44)
     - [#sec-section](https://gitlab.slack.com/archives/C02087FTL5V)
     - [#s_secure-alerts](https://gitlab.slack.com/archives/CAU9SFKNU)
+1. Monitor [Section Sec Request For Help](https://gitlab.com/gitlab-com/sec-sub-department/section-sec-request-for-help/-/issues/?label_name=Help%20group%3A%3Acomposition%20analysis) project for support requests. 
 1. Triage bugs and resolve them when given `~priority::1`. (See [Bugs triaging process](#bugs-triaging-process))
 1. Triage infradev issues and resolve them when given `~priority::1`. (See [Infradev triaging process](#infradev-triaging-process))
 
