Move Optimize from Manage to Plan (phase 1)

--- a/sites/handbook/source/includes/product/_categories-names.erb
+++ b/sites/handbook/source/includes/product/_categories-names.erb
@@ -444,7 +444,7 @@
 [Manage Access Paid GMAU]: /handbook/product/dev-section-performance-indicators/#manageaccess---paid-gmau---mau-using-paid-saml
 [Manage Compliance Paid GMAU]: /handbook/product/dev-section-performance-indicators/#managecompliance---paid-gmau---mau-viewing-compliance-features
 [Manage Import GMAU]: /handbook/product/dev-section-performance-indicators/#manageimport---gmau---mau-importing
-[Manage Optimize GMAU]: /handbook/product/dev-section-performance-indicators/#manage-manageoptimize---smau-gmau---mau-viewing-analytics-features
+[Plan Optimize GMAU]: /handbook/product/dev-section-performance-indicators/#manage-manageoptimize---smau-gmau---mau-viewing-analytics-features
 [Plan Project Management Paid GMAU]: /handbook/product/dev-section-performance-indicators/#planproject-management---paid-gmau---mau-interacting-with-issues
 [Plan Portfolio Management Paid GMAU]: /handbook/product/dev-section-performance-indicators/#planportfolio-management---paid-gmau---mau-creating-epics-each-month
 [Plan Certify Paid GMAU]: /handbook/product/dev-section-performance-indicators/#plancertify---paid-gmau---mau-interacting-with-requirements
