--- a/source/direction/kickoff/template.html.md.erb
+++ b/source/direction/kickoff/template.html.md.erb
@@ -33,7 +33,6 @@ https://docs.google.com/forms/d/e/1FAIpQLSdNyIB_Rk3rn2-PI-5dWhb7rUfBLmGziTlbmeKY
 **Video**:
 * [Manage:Authentication and Authorization Kickoff Playlist](https://www.youtube.com/playlist?list=PL05JrBw4t0Kp4Sv3eCZbZKtmMox3NipN-)
 * [Manage:Import Kickoff Playlist](https://www.youtube.com/playlist?list=PL05JrBw4t0KqqfLsMNj8EhZ9FoG1-54vH)
-* [Manage:Optimize Kickoff Playlist](https://www.youtube.com/playlist?list=PL05JrBw4t0KpoUh9zJ7qdUNwQunTgqLxk)
 
 **Issues**:
 <%= direction[keyValue]["manage"] %>
@@ -44,6 +43,7 @@ https://docs.google.com/forms/d/e/1FAIpQLSdNyIB_Rk3rn2-PI-5dWhb7rUfBLmGziTlbmeKY
 * [Plan:Project Management Kickoff Playlist](https://www.youtube.com/playlist?list=PL05JrBw4t0KoVOLOpXpnvmWwvUCieXJ-K)
 * [Plan:Product Planning Kickoff Playlist](https://www.youtube.com/playlist?list=PL05JrBw4t0KrIU9UtPgDDc7M3EE3GRNfV)
 * [Plan:Certify Kickoff Playlist](https://www.youtube.com/playlist?list=PL05JrBw4t0KpRGDNj5qwy5YOj9eEQ6Ut_)
+* [Plan:Optimize Kickoff Playlist](https://www.youtube.com/playlist?list=PL05JrBw4t0KpoUh9zJ7qdUNwQunTgqLxk)
 
 **Issues**:
 <%= direction[keyValue]["plan"] %>
