Update Optimize group slack

--- a/sites/handbook/source/handbook/engineering/development/dev/manage/optimize/index.html.md.erb
+++ b/sites/handbook/source/handbook/engineering/development/dev/manage/optimize/index.html.md.erb
@@ -136,7 +136,7 @@ The following people are permanent members of the group:
 
 * [Milestone retrospectives](https://gitlab.com/gl-retrospectives/manage-stage/optimize/-/issues)
 * Our Slack channels
-  * Plan:Optimize [#g_manage_optimize](https://gitlab.slack.com/messages/CJZR6KPB4)
+  * Plan:Optimize [#g_plan_optimize](https://gitlab.slack.com/messages/CJZR6KPB4)
   * Daily standups [#s_plan_standup](https://gitlab.slack.com/archives/CF6QWHRUJ)
 * Issue boards
   * Optimize [build board](https://gitlab.com/groups/gitlab-org/-/boards/1401511) and [refinement board](https://gitlab.com/groups/gitlab-org/-/boards/1874426)ֿ
